impl reworked persist/fetch/patch data
